--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "appslabke/lara-izitoast": "^1.1",
         "guzzlehttp/guzzle": "^7.2",
+        "kyslik/column-sortable": "^6.5",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.3"
+        "laravel/ui": "^4.3",
+        "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.27",
+        "laravel/pint": "^1.13",
+        "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
